# ETC

./: .gitignore  NOTES.md  README.md  REVIEW.md  TODO.md  dataset.py  profiler.py  pyproject.toml  sanity_check.py  training_sanity_check.py  training_test.py  tt.py  tx.py  viz_rel_pos_vals.py
backup/: tx.py
experiments/.ipynb_checkpoints/: Fast Clipped Attention-checkpoint.ipynb
src/: __init__.py  config.py  heads.py  mha.py  module.py  utils.py
src/blocks/: __init__.py  attention.py  auxiliary.py  ffn.py  relative_position.py
